--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/supertest": "^2.0.11",
+    "camelcase-keys": "^7.0.1",
     "cassandra-driver": "^4.6.3",
     "express": "^4.17.1",
     "jest": "^27.3.0",
     "nodemon": "^2.0.13",
+    "snakecase-keys": "^5.1.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
