JEST: Test case added.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Vaibhav Kumbhar",
   "license": "MIT",
   "dependencies": {
+    "@foxtrotplatform/platform_nodejs_exception": "^1.0.9",
     "@types/express": "^4.17.13",
     "@types/supertest": "^2.0.11",
     "camelcase-keys": "^7.0.1",
